--- a/roles/rhel_image/tasks/build_logs_display.yml
+++ b/roles/rhel_image/tasks/build_logs_display.yml
@@ -3,30 +3,30 @@
   ansible.builtin.tempfile:
     state: directory
     suffix: .logs
-  register: logs_directory
+  register: __rhi_logs_directory
 
 - name: Fetch build logs from osbuilder
   ansible.builtin.command:
-    cmd: composer-cli compose logs {{ build_uuid }}
-    chdir: "{{ logs_directory.path }}"
+    cmd: composer-cli compose logs {{ __rhi_build_uuid }}
+    chdir: "{{ __rhi_logs_directory.path }}"
   changed_when: true
 
 - name: Extract build logs archive
   ansible.builtin.unarchive:
-    src: "{{ logs_directory.path }}/{{ build_uuid }}-logs.tar"
-    dest: "{{ logs_directory.path }}"
+    src: "{{ __rhi_logs_directory.path }}/{{ __rhi_build_uuid }}-logs.tar"
+    dest: "{{ __rhi_logs_directory.path }}"
     remote_src: true
 
 - name: Read complete build logs
   ansible.builtin.slurp:
-    src: "{{ logs_directory.path + '/logs/osbuild.log' }}"
-  register: log_content
+    src: "{{ __rhi_logs_directory.path + '/logs/osbuild.log' }}"
+  register: __rhi_log_content
 
 - name: Display complete build logs
   ansible.builtin.debug:
-    msg: "{{ log_content.content | b64decode }}"
+    msg: "{{ __rhi_log_content.content | b64decode }}"
 
 - name: Remove temporary logs directory
   ansible.builtin.file:
-    path: "{{ logs_directory.path }}"
+    path: "{{ __rhi_logs_directory.path }}"
     state: absent
