--- a/roles/rhel_image/tasks/builder_setup.yml
+++ b/roles/rhel_image/tasks/builder_setup.yml
@@ -11,13 +11,13 @@
 
 - name: Read system repository configuration
   vars:
-    rhel_ver: "{{ ansible_facts.distribution_major_version }}"
-    rhel_arch: "{{ ansible_facts.architecture }}"
+    __rhi_rhel_ver: "{{ ansible_facts.distribution_major_version }}"
+    __rhi_rhel_arch: "{{ ansible_facts.architecture }}"
   ansible.builtin.shell: >
     set -o pipefail &&
-    grep -A 5 '^\[rhel-{{ rhel_ver }}-for-{{ rhel_arch }}-baseos-rpms\]' /etc/yum.repos.d/redhat.repo
+    grep -A 5 '^\[rhel-{{ __rhi_rhel_ver }}-for-{{ __rhi_rhel_arch }}-baseos-rpms\]' /etc/yum.repos.d/redhat.repo
     | awk '/baseurl/ {print $3}'
-  register: rhsm_baseurl
+  register: __rhi_rhsm_baseurl
   changed_when: false
   when:
     - rhel_image_use_satellite | bool
@@ -25,13 +25,13 @@
 
 - name: Create basic repository configuration files
   vars:
-    baseos_repo_url: "{{ rhsm_baseurl.stdout | replace('$releasever', item) }}"
-    appstream_repo_url: "{{ rhsm_baseurl.stdout | replace('$releasever', item) | replace('baseos', 'appstream') }}"
+    __rhi_baseos_repo_url: "{{ __rhi_rhsm_baseurl.stdout | replace('$releasever', item) }}"
+    __rhi_appstream_repo_url: "{{ __rhi_rhsm_baseurl.stdout | replace('$releasever', item) | replace('baseos', 'appstream') }}"
   ansible.builtin.template:
     src: rhel-repo.json.j2
     dest: /etc/osbuild-composer/repositories/rhel-{{ item }}.json
     mode: '0644'
-  register: config_basic
+  register: __rhi_config_basic
   loop: "{{ rhel_image_repo_versions | default([], true) }}"
   when: rhel_image_use_satellite | bool
 
@@ -40,7 +40,7 @@
     src: "{{ item }}"
     dest: /etc/osbuild-composer/repositories/{{ item | basename | replace('.j2', '') }}
     mode: '0644'
-  register: config_custom
+  register: __rhi_config_custom
   loop: "{{ rhel_image_repo_templates | default([], true) }}"
   when: rhel_image_use_satellite | bool
 
@@ -48,8 +48,8 @@
   ansible.builtin.reboot:
   when:
     - "'osbuild-composer' in ansible_facts.packages"
-    - config_basic is changed or
-      config_custom is changed
+    - __rhi_config_basic is changed or
+      __rhi_config_custom is changed
 
 - name: Install Image Builder
   ansible.builtin.dnf:
@@ -60,7 +60,7 @@
       - tar
       - weldr-client
     state: present
-  register: builder_packages
+  register: __rhi_builder_packages
   when: "'osbuild-composer' not in ansible_facts.packages"
 
 - name: Update all packages
@@ -69,7 +69,7 @@
     name: '*'
     state: latest
     update_cache: true
-  register: package_update
+  register: __rhi_package_update
   when: rhel_image_update_host | bool
 
 - name: Enable Image Builder
@@ -77,21 +77,21 @@
     name: osbuild-composer.socket
     state: started
     enabled: true
-  register: builder_socket
+  register: __rhi_builder_socket
 
 - name: Create user for building images
   ansible.builtin.user:
     name: "{{ rhel_image_builder_user }}"
     groups: weldr
     append: true
-  register: user_create
+  register: __rhi_user_create
   when: rhel_image_create_user | bool
 
 - name: Reboot system
   ansible.builtin.reboot:
   when:
     - rhel_image_reboot_host | bool
-    - builder_packages is changed or
-      package_update is changed or
-      builder_socket is changed or
-      user_create is changed
+    - __rhi_builder_packages is changed or
+      __rhi_package_update is changed or
+      __rhi_builder_socket is changed or
+      __rhi_user_create is changed
