--- a/roles/rhel_image/tasks/builder_uninstall.yml
+++ b/roles/rhel_image/tasks/builder_uninstall.yml
@@ -8,7 +8,7 @@
     state: absent
     autoremove: false
     cacheonly: true
-  register: builder_packages
+  register: __rhi_builder_packages
 
 - name: Remove Image Builder configuration and data directories
   ansible.builtin.file:
@@ -19,7 +19,7 @@
     - /var/cache/osbuild-composer
     - /var/cache/osbuild-worker
     - /var/lib/osbuild-composer
-  register: data_directories
+  register: __rhi_data_directories
 
 - name: Get list of osbuilder temporary directories
   ansible.builtin.find:
@@ -29,13 +29,13 @@
     file_type: directory
     patterns: 'dnf-_osbuild-composer*,tmp*'
     recurse: false
-  register: temp_directories
+  register: __rhi_temp_directories
 
 - name: Delete osbuilder temporary directories
   ansible.builtin.file:
     path: "{{ item.path }}"
     state: absent
-  loop: "{{ temp_directories.files }}"
+  loop: "{{ __rhi_temp_directories.files }}"
   loop_control:
     label: "{{ item.path }}"
   when: item.pw_name == '_osbuild-composer'
@@ -44,5 +44,5 @@
   ansible.builtin.reboot:
   when:
     - rhel_image_reboot_host | bool
-    - builder_packages is changed or
-      data_directories is changed
+    - __rhi_builder_packages is changed or
+      __rhi_data_directories is changed
